--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-color: #5a46aa;
+  background-color: #ffffff;
 }
 
 h1 {
