👮🚟 Checkpoint ./script.js:5959929/35:19534746/28 ./style.css:19534746/46

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
   background-color: #fffff0;
+  border-style: solid;
+  border-width: 6px;
 }
 
 h1 {
