--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-color: #fffff0;
+  background-color: #FFFFFF;
   border-style: solid;
   border-width: 6px;
 }
