--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
   background-color: #ffffff;
+  /*
   border-style: solid;
   border-width: 6px;
+  */
 }
 
 h1 {
